Fixed the Gnome spacing

--- a/public/style.css
+++ b/public/style.css
@@ -154,8 +154,8 @@ header {
 }
 
 .gnome-logo {
-    margin: 5px 0;
-    padding: 3px 0;
+    margin: 5px;
+    padding: 3px;
     height: 55px;
     border: 1px solid;
     background-color: var(--altbackground);
@@ -190,14 +190,12 @@ header {
 
 #navbar-search-button {
     /* font-size: 16px; */
+    margin: 0;
+    padding: 0;
     background: none;
     border: none;
     color: #343434;
     cursor: pointer;
-}
-
-#navbar-search-button img {
-    padding: 0;
 }
 
 #navbar-search-button:hover {
